[project]
name = "comfyui-yuan"
description = "Some simple&practical ComfyUI image processing nodes."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python"]

[project.urls]
Repository = "https://github.com/Cyber-Blacat/ComfyUI-Yuan"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Yuan"
Icon = ""
